--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
 
   <div class="form-container">
     <h2>Sign in</h2>
-    <form action="submit_form.php" method="POST">
+    <form action="/submit" method="POST">
     
 
       <!-- Email Field -->
