--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,17 +102,11 @@
 
 <div class="container" id="container">
   <div class="form-container">
-<<<<<<< HEAD
-    <!-- Sign In Form -->
-    <form id="sign-in-form">
-      <h2>Sign In</h2>
-=======
     <h2>Sign in</h2>
-    <form action="/submit" method="POST">
+    <form action="/signIn" method="POST">
     
 
       <!-- Email Field -->
->>>>>>> eb2b4565d43975a98ffa4cccccae8a830a615c8e
       <div class="form-group">
         <label>Email Address</label>
         <input type="email" name="email" required />
@@ -125,7 +119,7 @@
     </form>
 
     <!-- Sign Up Form -->
-    <form id="sign-up-form">
+    <form id="sign-up-form" action="/signUp" method="POST">
       <h2>Create an Account</h2>
       <div class="form-group">
         <label>Full Name</label>
