--- a/views/problems.ejs
+++ b/views/problems.ejs
@@ -16,7 +16,7 @@
 
     <!-- Problem Card 1 -->
     <div class="problem-card">
-      <img src="https://images.unsplash.com/photo-1581093588401-1f1c7c6c85a2" alt="Water Problem">
+      <img src="https://media.istockphoto.com/id/1200870119/photo/indian-tribal-village-at-bolpur-west-bengal-india-with-view-of-mud-hut-and-unpaved-village.webp?a=1&b=1&s=612x612&w=0&k=20&c=ZgSBbGQfXWYZ-XYhDSFksbQGklV4-nczCNX9q8qhfnQ=" alt="Water Problem">
       <div class="content">
         <h3>Water Supply Problem</h3>
         <p>The village is facing severe drinking water shortage.</p>
@@ -26,7 +26,7 @@
 
     <!-- Problem Card 2 -->
     <div class="problem-card">
-      <img src="https://images.unsplash.com/photo-1570129477492-45c003edd2be" alt="Broken Roads">
+      <img src="https://media.istockphoto.com/id/1289576893/photo/a-village-road-through-a-paddy-field-ready-to-harvest.jpg?s=612x612&w=0&k=20&c=51Nkm1YhtR0tvSaj3vOJRoLDZgXWdH4zTMhq_LRdMPk=" alt="Broken Roads">
       <div class="content">
         <h3>Broken Roads</h3>
         <p>Main connecting road is broken due to heavy rains.</p>
@@ -36,7 +36,7 @@
 
     <!-- Problem Card 3 -->
     <div class="problem-card">
-      <img src="https://images.unsplash.com/photo-1581320546864-9ed240186f2c" alt="No Electricity">
+      <img src="https://media.istockphoto.com/id/1970772376/photo/rural-life-of-a-village.jpg?s=612x612&w=0&k=20&c=kXFflHmtcnQtmOqiyWj_dKpwjMRNTwMzKpHhBfKfiXo=" alt="No Electricity">
       <div class="content">
         <h3>No Electricity</h3>
         <p>Frequent power cuts affecting the villagers' life.</p>
