--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -101,7 +101,7 @@
 <div class="container" id="container">
   <div class="form-container">
     <!-- Sign In Form -->
-    <form id="sign-in-form">
+    <form id="sign-in-form" action="/login" method="POST">
       <h2>Sign In</h2>
       <div class="form-group">
         <label>Email Address</label>
@@ -115,11 +115,11 @@
     </form>
 
     <!-- Sign Up Form -->
-    <form id="sign-up-form">
+    <form id="sign-up-form" action="/signup" method="POST">
       <h2>Sign Up</h2>
       <div class="form-group">
         <label>Full Name</label>
-        <input type="text" name="name" required />
+        <input type="text" name="fname" required />
       </div>
       <div class="form-group">
         <label>Email Address</label>
