--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -11,17 +11,31 @@
       padding: 0;
       font-family: Arial, sans-serif;
     }
-
     body {
-      background: #f2f2f2;
+  background: linear-gradient(to bottom right, #ff9933, #ffffff, #138808);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+
+
+  display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+}
+
+
+    /* body {
+      background-image: url();
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-    }
+    } */
 
     .container {
-      background: #c4c0c0;
+      background: #ccc;
       width: 400px;
       border-radius: 8px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
