--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
       </div>
 
       <!-- About Us Section -->
-      <section id="about-us" class="card mb-4 p-4">
+      <section id="about-us" class="card mt-5 mb-4 p-4">
         <h2>About Us</h2>
         <p>
           Our Panchayat is dedicated to improving the quality of life in our
